DTSAM-183 SSCS Multi-region for CTSC
   [DTSAM-183](https://tools.hmcts.net/jira/browse/DTSAM-183)

SSCS CTSC Multi-region for England & Wales.

NB: Also updates SSCS Judicial Multi-region for South West & Wales.